--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "the bare-bones internationalization library used by yargs",
   "main": "index.js",
   "scripts": {
+    "pretest": "standard",
     "test": "nyc mocha"
   },
   "repository": {
@@ -20,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/bcoe/y18n/issues"
   },
-  "homepage": "https://github.com/bcoe/y18n"
+  "homepage": "https://github.com/bcoe/y18n",
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "mocha": "^2.2.5",
+    "nyc": "^3.0.1",
+    "rimraf": "^2.4.2",
+    "standard": "^4.5.4"
+  }
 }
