Only include index.js in node package

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "nyc mocha",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
+  "files": [
+    "index.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git@github.com:yargs/y18n.git"
