build!: drop Node 6 and 4. begin following Node.js LTS schedule

--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "rimraf": "^2.5.0",
     "standard": "^10.0.0-beta.0",
     "standard-version": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=10"
   }
 }
