--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 sudo: false
 node_js:
-  - "4"
-  - "6"
+  - "10"
+  - "12"
+  - "14"
+  - "lts/*"
   - "node"
 after_success: npm run coverage
