--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "git@github.com:yargs/y18n.git"
   },
   "license": "ISC",
-  "author": "Ben Coe <ben@npmjs.com>",
+  "author": "Ben Coe <bencoe@gmail.com>",
   "main": "index.js",
   "files": [
     "index.js"
