--- a/package.json
+++ b/package.json
@@ -2,31 +2,31 @@
   "name": "y18n",
   "version": "4.0.0",
   "description": "the bare-bones internationalization library used by yargs",
-  "main": "index.js",
-  "scripts": {
-    "pretest": "standard",
-    "test": "nyc mocha",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "release": "standard-version"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:yargs/y18n.git"
-  },
-  "files": [
-    "index.js"
-  ],
   "keywords": [
     "i18n",
     "internationalization",
     "yargs"
   ],
-  "author": "Ben Coe <ben@npmjs.com>",
-  "license": "ISC",
+  "homepage": "https://github.com/yargs/y18n",
   "bugs": {
     "url": "https://github.com/yargs/y18n/issues"
   },
-  "homepage": "https://github.com/yargs/y18n",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:yargs/y18n.git"
+  },
+  "license": "ISC",
+  "author": "Ben Coe <bencoe@gmail.com>",
+  "main": "index.js",
+  "files": [
+    "index.js"
+  ],
+  "scripts": {
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "release": "standard-version",
+    "pretest": "standard",
+    "test": "nyc mocha"
+  },
   "devDependencies": {
     "chai": "^4.0.1",
     "coveralls": "^3.0.0",
@@ -35,5 +35,8 @@
     "rimraf": "^2.5.0",
     "standard": "^10.0.0-beta.0",
     "standard-version": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=10"
   }
 }
