--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "y18n",
   "version": "4.0.0",
   "description": "the bare-bones internationalization library used by yargs",
+  "exports": {
+    "import": "./build/lib/index.js",
+    "require": "./build/index.cjs"
+  },
+  "type": "module",
+  "module": "./build/lib/index.js",
+  "types": "./build/index.cjs.d.ts",
   "keywords": [
     "i18n",
     "internationalization",
@@ -18,23 +25,41 @@
   "license": "ISC",
   "author": "Ben Coe <bencoe@gmail.com>",
   "main": "index.js",
-  "files": [
-    "index.js"
-  ],
   "scripts": {
-    "fix": "standard --fix",
-    "coverage": "c8 --check-coverage report",
-    "pretest": "standard",
-    "test": "c8 mocha"
+    "check": "standardx '**/*.ts'",
+    "fix": "standardx --fix '**/*.ts'",
+    "pretest": "rimraf build && tsc -p tsconfig.test.json && cross-env NODE_ENV=test npm run build:cjs",
+    "test": "c8 --reporter=text --reporter=html mocha test/*.cjs",
+    "posttest": "npm run check",
+    "coverage": "c8 report --check-coverage",
+    "precompile": "rimraf build",
+    "compile": "tsc",
+    "postcompile": "npm run build:cjs",
+    "build:cjs": "rollup -c",
+    "postbuild:cjs": "node scripts/replace-legacy-export.cjs",
+    "prepare": "npm run compile"
   },
   "devDependencies": {
+    "@wessberg/rollup-plugin-ts": "^1.3.1",
     "c8": "^7.3.0",
     "chai": "^4.0.1",
+    "cross-env": "^7.0.2",
+    "gts": "^2.0.2",
     "mocha": "^8.0.0",
     "rimraf": "^3.0.2",
-    "standard": "^14.3.4"
+    "standardx": "^5.0.0",
+    "typescript": "^3.9.7"
   },
+  "files": [
+    "browser.js",
+    "build"
+  ],
   "engines": {
     "node": ">=10"
+  },
+  "standardx": {
+    "ignore": [
+      "build"
+    ]
   }
 }
