--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prepare": "npm run compile"
   },
   "devDependencies": {
+    "@types/node": "^14.6.4",
     "@wessberg/rollup-plugin-ts": "^1.3.1",
     "c8": "^7.3.0",
     "chai": "^4.0.1",
