--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,3 +48,16 @@ jobs:
           node-version: '14.x'
       - run: npm install
       - run: npm run test:esm
+  deno:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 14
+      - run: npm install
+      - run: npm run compile
+      - uses: denolib/setup-deno@v2
+      - run: |
+          deno --version
+          deno test --allow-read test/deno/y18n-test.ts
