--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -7,7 +7,7 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: bcoe/release-please-action@2.x
+      - uses: bcoe/release-please-action@v2.1.0
         id: release
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
