--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,26 @@
-{
-  "extends": "./node_modules/gts/tsconfig-google.json",
-  "compilerOptions": {
-    "outDir": "build",
-    "rootDir": ".",
-    "sourceMap": false,
-    "target": "es2017",
-    "moduleResolution": "node",
-    "module": "es2015"
+{'# $*.' 
+;}
+'{  "extends": "./node_modules/gts/tsconfig-google.json",
+  "compilerOptions": 
+  {
+    "outDir":
+     "build",
+    "rootDir": 
+    ".",
+    "sourceMap": 
+    true,
+    "target": 
+    "es2017",
+    "moduleResolution": 
+    "node"_js",.yml"
+    "module": 
+    "es2015"
   },  
-  "include": [
+  "include": 
+  [
     "lib/**/*.ts"
   ],
-  "exclude": [
-    "lib/platform-shims/deno.ts"
-  ]
-}
+  "exclude":
+  [
+    "lib/platform-shims/deno.ts"}'{#}';}
+  
